# entviz

./: .gitignore  23sy.md  25ac.md  2cmb.md  2e5b.md  2r5d.md  3ek3.md  3hh5.md  3rqj.md  3t6v.md  3wxb.md  4itk.md  4mfe.md  53lu.md  5633.md  5e4h.md  5fg5.md  5mho.md  5s5a.md  5yau.md  6dbx.md  6keq.md  6meh.md  6shr.md  75pm.md  77ua.md  7enn.md  7srp.md  7t43.md  7v3e.md  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SECURITY.md  TODO.md  entviz-critique-from-chatgpt.md  entviz-critique-from-gemini.md  entviz-paper.md  gallery.html  (+7 more)
.claude/skills/review-board/: SKILL.md
.claude/workflows/: review-panel.js
.github/: copilot-instructions.md  dependabot.yml
.github/rulesets/: README.md  apply.sh  protect-release-tags.json  require-review-contributors.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
compliance/: README.md  __init__.py  corpus.py  generate.py  model.py  raster.py  runner.py
compliance/corpus/: manifest.json
compliance/corpus/ar-1x1/: input.json  model.json
compliance/corpus/ar-1x2/: input.json  model.json
compliance/corpus/ar-2x1/: input.json  model.json
compliance/corpus/avalanche-a/: input.json  model.json
compliance/corpus/avalanche-b/: input.json  model.json
compliance/corpus/b64-large/: input.json  model.json
compliance/corpus/bitcoincash/: input.json  model.json
compliance/corpus/btc-legacy/: input.json  model.json
compliance/corpus/btc-segwit/: input.json  model.json
compliance/corpus/btc-segwit-p2wsh/: input.json  model.json
compliance/corpus/cesr-aid-b/: input.json  model.json
compliance/corpus/cesr-aid-d/: input.json  model.json
compliance/corpus/cesr-datetime/: input.json  model.json
compliance/corpus/cesr-idx-sig-ed25519/: input.json  model.json
compliance/corpus/cesr-idx-sig-ed448/: input.json  model.json
compliance/corpus/cesr-said-e/: input.json  model.json
compliance/corpus/cid-v0/: input.json  model.json
docs/: adversarial-reviewer-prompt.md  claude-code-prompt.md  entviz-paper-v6.md  entviz-paper.md  gallery.html  index.md  index_v3_draft.md  integration-guide.md  spec-change-log.md  spec-improvement-notes.md  spec-v10-draft.md  spec.md  threat-model.md
docs/v3/: index.md
entviz/: app.py  cell_shapes.py  colors.py  entropy.py  fingerprint.py  layout.py  pipeline.py  renderer.py  shapes.py  v3_render.py  v3_shapes.py
entviz/tests/: test_cell_shapes.py  test_crc_tokens.py  test_ellipse_clip_fix.py  test_entropy.py  test_f7_eip55.py  test_fingerprint.py  test_grid_selection.py  test_large_input.py  test_layout.py  test_phase10_color_bar.py  test_phase11_scs.py  test_phase12_ellipse.py  test_phase13_validation.py  test_phase4_avalanche.py  test_phase5_edge_repoint.py  test_phase7_geometry.py  test_phase8_layering.py  test_phase9_shapes_gradients.py  test_pipeline.py  test_renderer.py  test_shapes.py  test_shifting.py  test_snowflake.py  test_tokenization.py  test_v3_color_bar_frame.py  test_v3_color_bar_skew.py  test_v3_defs_use.py  test_v3_ellipse.py  test_v3_hex_font.py  test_v3_scs_styling.py  test_v3_shapes_data.py  test_v4_base32.py  test_v4_bech32.py  test_v4_blank_cells.py  test_v4_clip_id_uniqueness.py  test_v4_color_bar_source.py  test_v4_contrast_threshold.py  test_v4_ethereum_detection.py  test_v4_hex_lowercase.py  test_v4_label_regions.py  (+11 more)
experiments/casual-avalanche/: FINDINGS.md  README.md  ciede2000.py  diag_blanks.py  diag_small.py  levers.py  metrics.py  model.py  paper-section-draft.md  run.py
new-shapes/: entviz-comparison-matrices.md  entviz-svg-encoding.md  entviz-theory-notes.md
prompts/: adversarial-reviewer-prompt.md
prompts/review/: architect.md  devops-engineer.md  maintainability-expert.md  orchestrating-reviews.md  perception-reviewer.md  security-hawk.md  spec-conformance-auditor.md  testability-hawk.md
refs/: inputs.txt
refs/gallery/: index.html
refs/gallery-v3/: index.html
refs/gallery3/: index.html
refs/gallery4/: index.html
refs/overlay-options/: index.html
reviews/: adversarial-2026-05-27.md  adversarial-2026-06-02.md  devops-engineer-2026-06-05 review.md  devops-engineer-2026-06-08 review.md  ellipse-audit-2026-06-02.md  entropy-characterization-EXECUTION.md  entropy-characterization-redesign.md  maintainability-expert-2026-06-05 review.md  maintainability-expert-2026-06-08 review.md  palette-optimization-findings.md  paper-todo.md  paper-v6-update-plan.md  perception-reviewer-2026-06-08 review.md  review-panel-2026-06-05 review.md  review-panel-2026-06-08 review.md  security-hawk-2026-06-05 review.md  security-hawk-2026-06-08 review.md  spec-conformance-auditor-2026-06-08 review.md  spec-editorial-findings.md  spec-editorial-plan.md  spec-improvement-notes.md  spec-requirements-inventory.md  spec-target-outline.md  testability-hawk-2026-06-05 review.md  testability-hawk-2026-06-08 review.md  v14-label-redesign.md
scripts/: check_unicode.py  ellipse_prototype.py  figlib.py  gallery.py  palette_figures.py  paper_figures.py  release.py  social_card.py  spec_figures.py
src/entviz/: __init__.py  app.py  characterize.py  colors.py  entropy.py  fingerprint.py  keccak.py  pipeline.py  renderer.py
tests/: conformance_fake_impl.py  test_adversarial_additional.py  test_adversarial_fixes.py  test_app.py  test_cesr_semantic_prefix.py  test_characterize.py  test_check_unicode.py  test_cid_multicodec.py  test_closed_profile.py  test_colors.py  test_compliance.py  test_conformance_invariances.py  test_crc_tokens.py  test_entropy.py  test_extra_alphabets.py  test_figure_marker_colors.py  test_figures.py  test_gallery.py  test_issue31_quiet_margin.py  test_issue36_indexer_dater.py  test_large_input.py  test_layout.py  test_no_exponential_notation.py  test_paper_figures.py  test_phase10_color_bar.py  test_phase12_ellipse.py  test_phase13_validation.py  test_phase4_avalanche.py  test_phase7_geometry.py  test_phase8_layering.py  test_pipeline.py  test_runner_external.py  test_shapes.py  test_snowflake.py  test_social_card.py  test_swhid_gitoid.py  test_tokenization.py  test_user_note.py  test_v10_casual_avalanche.py  test_v11_did_urn.py  (+26 more)
(+128 files in other folders)
